--- a/dev-data/todo
+++ b/dev-data/todo
@@ -2,17 +2,20 @@ What To Do that Jonas missed:
         done - adding or operators to url query api
         done - adding api documentation for every api version
         done - fix broken alias 
+    - give people a way to restore their deleted account
     - filling documentation
     - templating documentation
     - creative 404
     - building a welcome screen with a gmail like registration popup
     - multilanguages
-    - adding an admin portal for creating new tours
+        done - adding an admin portal for creating new tours
     - adding feature upload user photo and use it
     - adding specific color or theme to every tour: green, pink, yellow, red, blue
-    - adding possibility to review tours, see your reviews, only if you bought them
+        done - adding possibility to review tours, see your reviews, 
+    todo        only if you bought them
     - adding feature to see booked tours, and billing + unbook a tour and terms and policy
     - adding links to bottom menu, become a guide, about us, download apps etc...
     - adding search and filtering buttons for tours
-    - learning about advanced stuff like cookies, streaming etc...
-    - learn how to have a property on mongoose used in another property automatically
+    - learning about advanced stuff like streaming etc...
+        done - learning about advanced stuff like cookies
+        done - learn how to have a property on mongoose used in another property automatically
