--- a/dev-data/todo
+++ b/dev-data/todo
@@ -19,3 +19,4 @@ What To Do that Jonas missed:
     - learning about advanced stuff like streaming etc...
         done - learning about advanced stuff like cookies
         done - learn how to have a property on mongoose used in another property automatically
+    - factory handler
