--- a/dev-data/todo
+++ b/dev-data/todo
@@ -24,3 +24,5 @@ What To Do that Jonas missed:
         done - add reviews propely'
         done - test all the endpoints
         done - fix limitng fields bug
+    - add search and filter for tours
+    - when a tour date passes delete this tour date and rearrange the tour dates array
