--- a/dev-data/todo
+++ b/dev-data/todo
@@ -27,4 +27,6 @@ What To Do that Jonas missed:
     - add search and filter for tours
     - when a tour date passes delete this tour date and rearrange the tour dates array
     - use webpack to bundle scripts
+    - implement signup from existing templates
         done - fix section pictures
+    - maps and style for maps offline
