--- a/dev-data/todo
+++ b/dev-data/todo
@@ -30,4 +30,4 @@ What To Do that Jonas missed:
     - implement signup from existing templates
         done - fix section pictures
     - maps and style for maps offline
-    - add one day to the display duration on profile pages for tours
+        done - add one day to the display duration on profile pages for tours
