--- a/dev-data/todo
+++ b/dev-data/todo
@@ -31,3 +31,4 @@ What To Do that Jonas missed:
         done - fix section pictures
     - maps and style for maps offline
         done - add one day to the display duration on profile pages for tours
+    - implement website for password reset
