--- a/dev-data/todo
+++ b/dev-data/todo
@@ -35,3 +35,4 @@ What To Do that Jonas missed:
     - add stripe subscriptions for getting three free tours every year for example
     - add analytics and statistics
     - manage tours, see bookings, review and manage users, get refunded for cancellations
+    - restrict review only for purchased tours
